# parcelextract

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  PLANNING.md  PRD.md  README.md  SCRATCHPAD.md  TASKS.md  combined_transcripts.html  pyproject.toml  pytest.ini
.claude/commands/: freshstart.md  refresh.md  summ+commit.md
docs/: _config.yml  changelog.md  index.md  planning.md  tasks.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: batch_processing.py  difumo_atlas_demo.py  probabilistic_atlas_demo.py  quickstart.py  templateflow_error_handling_demo.py
src/parcelextract/: __init__.py
src/parcelextract/atlases/: manager.py  templateflow.py
src/parcelextract/cli/: main.py
src/parcelextract/core/: extractor.py  strategies.py  validators.py
src/parcelextract/io/: readers.py  writers.py
testdata/test_output/: ses-3T_task-motor_contrast-lh_stat-fixzscore_atlas-Schaefer2018_desc-200Parcels17Networks_timeseries.json  ses-3T_task-motor_contrast-lh_stat-fixzscore_atlas-Schaefer2018_desc-200Parcels17Networks_timeseries.tsv
tests/: conftest.py  test_4d_synthetic_signal_extraction.py  test_atlases.py  test_cli.py  test_difumo_support.py  test_extractor.py  test_io.py  test_probabilistic_atlas.py  test_resolution_matching.py  test_signal_validation.py  test_simple_4d_extraction.py  test_spatial_validation.py  test_strategies.py  test_templateflow.py  test_templateflow_error_handling.py  test_validators.py  test_writers.py
